Add scale bars to mitotic domains figure

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1028,7 +1028,7 @@ mutants using as a proxy the tortuosity of the epithelium outline. For
 that, we took the profile slices from dorsal recordings and transformed
 the curved vitelline envelope into a straight line using the
 <em>Straighten</em> tool of ImageJ (Figure <a
-href="#fig:tortuosity">S9</a>a). We then cropped a 200x25µm region along
+href="#fig:tortuosity">S9</a>a). We then cropped a 200×25µm region along
 the head–trunk interface and applied gaussian blur, thresholding, and
 edge detection to obtain the epithelium outline for individual
 timepoints covering about 50min after gastrulation (Figure <a
@@ -1621,7 +1621,7 @@ abdita</em></a>. <em>PLoS One</em> <strong>9</strong>, e84421
 <div id="fig:ectopic" class="fignos">
 <figure>
 <img src="figures/Fig1.jpg" style="width:100.0%"
-alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. Scale bars = 20µm. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. Scale bars = 50µm. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about 7 minutes after gastrulation in wildtype (+/+, n=16) and btd heterozygotes (+/−, n=6), and is delayed in eve and prd heterozygotes (+/−, n=7 and n=10, respectively) and in prd homozygotes (−/−, n=5). Ectopic folds form about 20min after gastrulation in btd and eve homozygotes (−/−, n=5 and n=5, respectively). One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. The n values are the same as in d. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants (n=6). Scale bars = 50µm. g, Folded area of the cephalic furrow in a representative sibling control and of ectopic folds in a btd mutant (measure in µm2 × 103). The data is visualized in a cartographic projection of the surface of the embryo. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
+alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. Scale bars = 20µm. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. Scale bars = 50µm. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about 7 minutes after gastrulation in wildtype (+/+, n=16) and btd heterozygotes (+/−, n=6), and is delayed in eve and prd heterozygotes (+/−, n=7 and n=10, respectively) and in prd homozygotes (−/−, n=5). Ectopic folds form about 20min after gastrulation in btd and eve homozygotes (−/−, n=5 and n=5, respectively). One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. The n values are the same as in d. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants (n=6). Scale bars = 50µm. g, Folded area of the cephalic furrow in a representative sibling control and of ectopic folds in a btd mutant (measure in µm2×103). The data is visualized in a cartographic projection of the surface of the embryo. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
 <figcaption aria-hidden="true"><span>Figure 1:</span> Formation of
 ectopic folds in cephalic furrow mutants. <strong>a</strong>, Overview
 of key developmental events using a standard developmental staging<span
@@ -1664,13 +1664,12 @@ the distribution of the cephalic furrow in sibling controls
 (<em>btd</em> heterozygotes) and of the ectopic folds in <em>btd</em>
 mutants (n=6). Scale bars = 50µm. <strong>g</strong>, Folded area of the
 cephalic furrow in a representative sibling control and of ectopic folds
-in a <em>btd</em> mutant (measure in µm<sup>2</sup> × 10<sup>3</sup>).
-The data is visualized in a cartographic projection of the surface of
-the embryo. <strong>h</strong>, Quantification of the total folded area
-of epithelial surface in cephalic furrow mutants.</figcaption>
+in a <em>btd</em> mutant (measure in µm<sup>2</sup>×10<sup>3</sup>). The
+data is visualized in a cartographic projection of the surface of the
+embryo. <strong>h</strong>, Quantification of the total folded area of
+epithelial surface in cephalic furrow mutants.</figcaption>
 </figure>
 </div>
-<!--TODO:AB: Add sampling numbers to the plots-->
 <!--**h**, Quantification of the total folded area of epithelial surface in cephalic furrow mutants. Wildtype embryos show a larger folded area compared to the cephalic furrow in heterozygotes and to the ectopic folds in homozygote embryos.-->
 <!--**e**, Dynamics of cephalic furrow invagination and ectopic fold formation in a single representative embryo.-->
 <!--**f**, Angle analyses between sibling control and *btd* embryos based on the fold tracing in a lateral view as in (**d**,**e**).-->
@@ -1679,24 +1678,25 @@ of epithelial surface in cephalic furrow mutants.</figcaption>
 <div id="fig:mitotic" class="fignos">
 <figure>
 <img src="figures/Fig2.jpg" style="width:60.0%"
-alt="Figure 2: Coincidence of mitotic domains and germ band extension with ectopic folding. a, Position of ectopic folds (black lines) in relation to the mitotic domains (colored areas) in btd and eve mutants. The ectopic folds appear between mitotic domains and between the germ band and MD6. b, Apical cell area between mitotic domains MD5 and MD7/6 (top). The infolded area is highlighted in the last frame (4.6 min). Detail of a cell subset in between mitotic domains (bottom) showing non-dividing cells (orange) and adjacent dividing cells (blue). c, Ectopic folding forming between MD6 and the germ band in a btd mutant. d, Strain rate analysis at the head–trunk (top) and trunk–germ (bottom) regions. The formation of the cephalic furrow (CF), ectopic folds (EF), and mitotic domains (MD) are annotated. The measurements combine isotropic and anisotropic strain rate. e, Compressed epithelial cells between MD6 and the tip of the germ band." />
+alt="Figure 2: Coincidence of mitotic domains and germ band extension with ectopic folding. a, Position of ectopic folds (black lines) in relation to the mitotic domains (colored areas) in btd and eve mutants. The ectopic folds appear between mitotic domains and between the germ band and the mitotic domain 6 (MD6). Scale bars = 50µm. b, Apical cell area between mitotic domains MD5 and MD7/6 (top). The infolded area is highlighted in the last frame (4.6 min). Detail of a cell subset in between mitotic domains (bottom) showing non-dividing cells (orange) and adjacent dividing cells (blue). Scale bars = 20µm. c, Ectopic folding forming between MD6 and the germ band in a btd mutant. Scale bar = 20µm. d, Strain rate analysis at the head–trunk (top) and trunk–germ (bottom) regions. The formation of the cephalic furrow (CF), ectopic folds (EF), and mitotic domains (MD) are annotated. The measurements combine isotropic and anisotropic strain rate. e, Compressed epithelial cells between MD6 and the tip of the germ band. Scale bars = 50µm." />
 <figcaption aria-hidden="true"><span>Figure 2:</span> Coincidence of
 mitotic domains and germ band extension with ectopic folding.
 <strong>a</strong>, Position of ectopic folds (black lines) in relation
 to the mitotic domains (colored areas) in <em>btd</em> and <em>eve</em>
 mutants. The ectopic folds appear between mitotic domains and between
-the germ band and MD6. <strong>b</strong>, Apical cell area between
-mitotic domains MD5 and MD7/6 (top). The infolded area is highlighted in
-the last frame (4.6 min). Detail of a cell subset in between mitotic
-domains (bottom) showing non-dividing cells (orange) and adjacent
-dividing cells (blue). <strong>c</strong>, Ectopic folding forming
-between MD6 and the germ band in a <em>btd</em> mutant.
+the germ band and the mitotic domain 6 (MD6). Scale bars = 50µm.
+<strong>b</strong>, Apical cell area between mitotic domains MD5 and
+MD7/6 (top). The infolded area is highlighted in the last frame (4.6
+min). Detail of a cell subset in between mitotic domains (bottom)
+showing non-dividing cells (orange) and adjacent dividing cells (blue).
+Scale bars = 20µm. <strong>c</strong>, Ectopic folding forming between
+MD6 and the germ band in a <em>btd</em> mutant. Scale bar = 20µm.
 <strong>d</strong>, Strain rate analysis at the head–trunk (top) and
 trunk–germ (bottom) regions. The formation of the cephalic furrow (CF),
 ectopic folds (EF), and mitotic domains (MD) are annotated. The
 measurements combine isotropic and anisotropic strain rate.
 <strong>e</strong>, Compressed epithelial cells between MD6 and the tip
-of the germ band.</figcaption>
+of the germ band. Scale bars = 50µm.</figcaption>
 </figure>
 </div>
 <!--**d**, Strain rate analysis at the head--trunk (top) and trunk--germ (bottom) regions. The head--trunk shows higher strain rates coinciding with the appearance of ectopic folds. The strain rate at the trunk--germ is lower and gradually increases. The measurements combine isotropic and anisotropic strain rate.-->
