Add scale bars to live experiments

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1773,33 +1773,35 @@ extension.</figcaption>
 <div id="fig:experiments" class="fignos">
 <figure>
 <img src="figures/Fig4.jpg" style="width:100.0%"
-alt="Figure 4: Perturbation experiments in vivo using cephalic furrow mutants and wildtype embryos. a, Lateral view of btd–stg double mutants showing the absence of ectopic folds at the head–trunk boundary compared to a btd mutant. b, Profile view of a btd–stg double mutant showing the head–trunk epithelium without mitotic domains or ectopic folds. c, Cauterized eve mutant in lateral (top) and dorsal view (bottom) at the maximum apical expansion of dividing cells in mitotic domains. The cauterization site is marked by a vermilion circle. The boxed outline (right) shows the progressive expansion of mitotic domains compressing the non-dividing cells between MD1 and MD5. d Profile view and epithelial trace of non-cauterized and cauterized btd and eve embryos. The trace shows the dynamics of epithelial deformations over time colored from purple to yellow. Cauterized mutants show no ectopic folds and less deformation of the epithelium. e, Cauterized wildtype embryo in lateral (top) and dorsal view (bottom). The cauterization site is marked by a vermilion circle. The cephalic furrow invaginates normally. f, Profile view of a non-cauterized and a cauterized wildtype embryo showing a small difference in depth. g, Tortuosity of the epithelial traces in non-cauterized and cauterized mutant embryos from d. h, Maximum depth of the cephalic furrow in control and cauterized wildtype embryos. The cephalic furrow in cauterized embryos is 15% shallower but the difference is not significant.  i, Recoil velocity of laser ablations around the cephalic furrow at stage 6. The average recoil increases with time, and decreases as a function of the distance to the initiator cells. In late stage 6 the region showing recoil reaches 40µm anterior and posterior of the invagination. j, Schematic drawings showing the summary of the ectopic folding in double mutants and germ band cauterization experiments." />
+alt="Figure 4: Perturbation experiments in vivo using cephalic furrow mutants and wildtype embryos. a, Lateral view of btd–stg double mutants showing the absence of ectopic folds at the head–trunk boundary compared to a btd mutant. Scale bar = 50µm. b, Profile view of a btd–stg double mutant showing the head–trunk epithelium without mitotic domains or ectopic folds. Scale bar = 20µm. c, Cauterized eve mutant in lateral (top) and dorsal view (bottom) at the maximum apical expansion of dividing cells in mitotic domains. The cauterization site is marked by a vermilion circle. The boxed outline (right) shows the progressive expansion of mitotic domains compressing the non-dividing cells between MD1 and MD5. Scale bars = 50µm. d Profile view and epithelial trace of non-cauterized and cauterized btd and eve embryos. The trace shows the dynamics of epithelial deformations over time colored from purple to yellow. Cauterized mutants show no ectopic folds and less deformation of the epithelium. Scale bars = 20µm. e, Cauterized wildtype embryo in lateral (top) and dorsal view (bottom). The cauterization site is marked by a vermilion circle. The cephalic furrow invaginates normally. Scale bar = 50µm. f, Profile view of a non-cauterized and a cauterized wildtype embryo showing a small difference in depth. Scale bar = 20µm. g, Tortuosity of the epithelial traces in non-cauterized and cauterized mutant embryos from d. h, Maximum depth of the cephalic furrow in control and cauterized wildtype embryos. The cephalic furrow in cauterized embryos is 15% shallower but the difference is not significant.  i, Recoil velocity of laser ablations around the cephalic furrow at stage 6. The average recoil increases with time, and decreases as a function of the distance to the initiator cells. In late stage 6 the region showing recoil reaches 40µm anterior and posterior of the invagination. j, Schematic drawings showing the summary of the ectopic folding in double mutants and germ band cauterization experiments." />
 <figcaption aria-hidden="true"><span>Figure 4:</span> Perturbation
 experiments <em>in vivo</em> using cephalic furrow mutants and wildtype
 embryos. <strong>a</strong>, Lateral view of <em>btd</em>–<em>stg</em>
 double mutants showing the absence of ectopic folds at the head–trunk
-boundary compared to a <em>btd</em> mutant. <strong>b</strong>, Profile
-view of a <em>btd</em>–<em>stg</em> double mutant showing the head–trunk
-epithelium without mitotic domains or ectopic folds. <strong>c</strong>,
-Cauterized <em>eve</em> mutant in lateral (top) and dorsal view (bottom)
-at the maximum apical expansion of dividing cells in mitotic domains.
-The cauterization site is marked by a vermilion circle. The boxed
-outline (right) shows the progressive expansion of mitotic domains
-compressing the non-dividing cells between MD1 and MD5.
+boundary compared to a <em>btd</em> mutant. Scale bar = 50µm.
+<strong>b</strong>, Profile view of a <em>btd</em>–<em>stg</em> double
+mutant showing the head–trunk epithelium without mitotic domains or
+ectopic folds. Scale bar = 20µm. <strong>c</strong>, Cauterized
+<em>eve</em> mutant in lateral (top) and dorsal view (bottom) at the
+maximum apical expansion of dividing cells in mitotic domains. The
+cauterization site is marked by a vermilion circle. The boxed outline
+(right) shows the progressive expansion of mitotic domains compressing
+the non-dividing cells between MD1 and MD5. Scale bars = 50µm.
 <strong>d</strong> Profile view and epithelial trace of non-cauterized
 and cauterized <em>btd</em> and <em>eve</em> embryos. The trace shows
 the dynamics of epithelial deformations over time colored from purple to
 yellow. Cauterized mutants show no ectopic folds and less deformation of
-the epithelium. <strong>e</strong>, Cauterized wildtype embryo in
-lateral (top) and dorsal view (bottom). The cauterization site is marked
-by a vermilion circle. The cephalic furrow invaginates normally.
-<strong>f</strong>, Profile view of a non-cauterized and a cauterized
-wildtype embryo showing a small difference in depth. <strong>g</strong>,
-Tortuosity of the epithelial traces in non-cauterized and cauterized
-mutant embryos from <strong>d</strong>. <strong>h</strong>, Maximum
-depth of the cephalic furrow in control and cauterized wildtype embryos.
-The cephalic furrow in cauterized embryos is 15% shallower but the
-difference is not significant. <!--TODO:PT: By what statistical test?-->
+the epithelium. Scale bars = 20µm. <strong>e</strong>, Cauterized
+wildtype embryo in lateral (top) and dorsal view (bottom). The
+cauterization site is marked by a vermilion circle. The cephalic furrow
+invaginates normally. Scale bar = 50µm. <strong>f</strong>, Profile view
+of a non-cauterized and a cauterized wildtype embryo showing a small
+difference in depth. Scale bar = 20µm. <strong>g</strong>, Tortuosity of
+the epithelial traces in non-cauterized and cauterized mutant embryos
+from <strong>d</strong>. <strong>h</strong>, Maximum depth of the
+cephalic furrow in control and cauterized wildtype embryos. The cephalic
+furrow in cauterized embryos is 15% shallower but the difference is not
+significant. <!--TODO:PT: By what statistical test?-->
 <strong>i</strong>, Recoil velocity of laser ablations around the
 cephalic furrow at stage 6. The average recoil increases with time, and
 decreases as a function of the distance to the initiator cells. In late
