Add n numbers and stats to wt depth and ablations

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -644,32 +644,32 @@ variability, phenocopying the cephalic furrow <em>in vivo</em>
 (Figure <a href="#fig:cf-sweep">S8</a>a). Since our experiments indicate
 that the germ band is compressing the head–trunk tissues, we first asked
 whether the extension of the germ band can influence the depth of the
-cephalic furrow.
+cephalic furrow. To test <em>in vivo</em> whether the presence of the
+germ band impacts the formation of the cephalic furrow, we blocked the
+germ band extension by cauterization in wildtype embryos. The cephalic
+furrow forms normally in cauterized embryos indicating that the germ
+band extension is not required for its formation (Figure <a
+href="#fig:experiments">4</a>e,f). We then measured the maximum depth of
+the cephalic furrow between cauterized and non-cauterized embryos, and
+found it is 15% shallower after cauterization (Figure <a
+href="#fig:experiments">4</a>h). This result needs to be corroborated
+with a larger sample size, but it provides initial evidence that the
+germ band extension has a mild influence on the final depth of the
+cephalic furrow. In addition, we performed a complementary experiment to
+determine the size of the region under the influence of the cephalic
+furrow. By laser ablating cell membranes at different distances from
+initiator cells in early wildtype embryos, we find that the recoil
+velocity increases with time and decreases with distance, with an
+approximate range of at least 40µm anterior and posterior to the
+initiator cells (Figure <a href="#fig:experiments">4</a>i). This
+suggests the cephalic furrow actively generates tension by pulling the
+surrounding tissues. These experiments rule out the germ band extension
+as a driver of cephalic furrow invagination, and give support to the
+notion that the cephalic furrow forms autonomously by independent active
+mechanisms which are deployed before the other morphogenetic movements
+of gastrulation.</p>
 <!--The simulations show that the average depth of the cephalic furrow correlates with the percentage of germ band extension ({@fig:model}i).-->
 <!--Mitotic activity and germ band elongation contributes to the depth of the cephalic furrow [@Campos-Ortega1997-rd].-->
-To test <em>in vivo</em> whether the presence of the germ band impacts
-the formation of the cephalic furrow, we blocked the germ band extension
-by cauterization in wildtype embryos. The cephalic furrow forms normally
-in cauterized embryos indicating that the germ band extension is not
-required for its formation (Figure <a href="#fig:experiments">4</a>e,f).
-We then measured the maximum depth of the cephalic furrow between
-cauterized and non-cauterized embryos. The cephalic furrow in cauterized
-embryos is 15% shallower, but this difference was not significant,
-indicating the germ band extension has at most a mild influence on the
-depth of the cephalic furrow (Figure <a href="#fig:experiments">4</a>h).
-<!--TODO: Add result of statistical test--> In addition, we performed a
-complementary experiment to determine the size of the region under the
-influence of the cephalic furrow. By laser ablating cell membranes at
-different distances from initiator cells in early wildtype embryos, we
-find that the recoil velocity increases with time and decreases with
-distance, with an approximate range of at least 40µm anterior and
-posterior to the initiator cells (Figure <a
-href="#fig:experiments">4</a>i). This suggests the cephalic furrow
-actively generates tension by pulling the surrounding tissues. These
-experiments rule out the germ band extension as a driver of cephalic
-furrow invagination, and give support to the notion that the cephalic
-furrow forms autonomously by independent active mechanisms which are
-deployed before the other morphogenetic movements of gastrulation.</p>
 <!--TODO:AB: Is the increase in recoil velocity because CF or epithelial maturation?-->
 <p>Next, we tested the conditions that impact the effectiveness of the
 cephalic furrow in preventing the formation of ectopic folds. We ran
@@ -1773,7 +1773,7 @@ extension.</figcaption>
 <div id="fig:experiments" class="fignos">
 <figure>
 <img src="figures/Fig4.jpg" style="width:100.0%"
-alt="Figure 4: Perturbation experiments in vivo using cephalic furrow mutants and wildtype embryos. a, Lateral view of btd–stg double mutants showing the absence of ectopic folds at the head–trunk boundary compared to a btd mutant. Scale bar = 50µm. b, Profile view of a btd–stg double mutant showing the head–trunk epithelium without mitotic domains or ectopic folds. Scale bar = 20µm. c, Cauterized eve mutant in lateral (top) and dorsal view (bottom) at the maximum apical expansion of dividing cells in mitotic domains. The cauterization site is marked by a vermilion circle. The boxed outline (right) shows the progressive expansion of mitotic domains compressing the non-dividing cells between MD1 and MD5. Scale bars = 50µm. d Profile view and epithelial trace of non-cauterized and cauterized btd and eve embryos. The trace shows the dynamics of epithelial deformations over time colored from purple to yellow. Cauterized mutants show no ectopic folds and less deformation of the epithelium. Scale bars = 20µm. e, Cauterized wildtype embryo in lateral (top) and dorsal view (bottom). The cauterization site is marked by a vermilion circle. The cephalic furrow invaginates normally. Scale bar = 50µm. f, Profile view of a non-cauterized and a cauterized wildtype embryo showing a small difference in depth. Scale bar = 20µm. g, Tortuosity of the epithelial traces in non-cauterized (btd n=2, eve n=3) and cauterized (btd n=3, eve n=4) embryos from d. For each embryo, the left and right side were measured. h, Maximum depth of the cephalic furrow in control and cauterized wildtype embryos. The cephalic furrow in cauterized embryos is 15% shallower but the difference is not significant.  i, Recoil velocity of laser ablations around the cephalic furrow at stage 6. The average recoil increases with time, and decreases as a function of the distance to the initiator cells. In late stage 6 the region showing recoil reaches 40µm anterior and posterior of the invagination. j, Schematic drawings showing the summary of the ectopic folding in double mutants and germ band cauterization experiments." />
+alt="Figure 4: Perturbation experiments in vivo using cephalic furrow mutants and wildtype embryos. a, Lateral view of btd–stg double mutants showing the absence of ectopic folds at the head–trunk boundary compared to a btd mutant. Scale bar = 50µm. b, Profile view of a btd–stg double mutant showing the head–trunk epithelium without mitotic domains or ectopic folds. Scale bar = 20µm. c, Cauterized eve mutant in lateral (top) and dorsal view (bottom) at the maximum apical expansion of dividing cells in mitotic domains. The cauterization site is marked by a vermilion circle. The boxed outline (right) shows the progressive expansion of mitotic domains compressing the non-dividing cells between MD1 and MD5. Scale bars = 50µm. d Profile view and epithelial trace of non-cauterized and cauterized btd and eve embryos. The trace shows the dynamics of epithelial deformations over time colored from purple to yellow. Cauterized mutants show no ectopic folds and less deformation of the epithelium. Scale bars = 20µm. e, Cauterized wildtype embryo in lateral (top) and dorsal view (bottom). The cauterization site is marked by a vermilion circle. The cephalic furrow invaginates normally. Scale bar = 50µm. f, Profile view of a non-cauterized and a cauterized wildtype embryo showing a small difference in depth. Scale bar = 20µm. g, Tortuosity of the epithelial traces in non-cauterized (btd n=2, eve n=3) and cauterized (btd n=3, eve n=4) embryos from d. For each embryo, the left and right side were measured. h, Maximum depth of the cephalic furrow in cauterized embryos. Control non-cauterized embryos include wildtype (n=2), and btd (n=1) and eve (n=3) heterozygotes which also form a cephalic furrow. The cauterized group includes wildtype (n=2) and btd (n=1). The cephalic furrow in cauterized embryos is 15% shallower (p=0.0221 in Welch Two Sample t-test). i, Recoil velocity of laser ablations around the cephalic furrow at stage 6. The average recoil increases with time for anterior cuts (early n=11, mid n=13, late n=12), and reaches a peak at mid stage 6 for posterior cuts (early n=7, mid n=14, late n=10). The average recoil velocity is smaller at greater distances (−40 and 40) than at shorter distances (−20 and 20) from the initiator cells. In late stage 6 the region with recoil reaches at least 40µm anterior and posterior of the invagination. j, Schematic drawings showing the summary of the ectopic folding in double mutants and germ band cauterization experiments." />
 <figcaption aria-hidden="true"><span>Figure 4:</span> Perturbation
 experiments <em>in vivo</em> using cephalic furrow mutants and wildtype
 embryos. <strong>a</strong>, Lateral view of <em>btd</em>–<em>stg</em>
@@ -1801,16 +1801,21 @@ the epithelial traces in non-cauterized (<em>btd</em> n=2, <em>eve</em>
 n=3) and cauterized (<em>btd</em> n=3, <em>eve</em> n=4) embryos from
 <strong>d</strong>. For each embryo, the left and right side were
 measured. <strong>h</strong>, Maximum depth of the cephalic furrow in
-control and cauterized wildtype embryos. The cephalic furrow in
-cauterized embryos is 15% shallower but the difference is not
-significant. <!--TODO:PT: By what statistical test?-->
+cauterized embryos. Control non-cauterized embryos include wildtype
+(n=2), and <em>btd</em> (n=1) and <em>eve</em> (n=3) heterozygotes which
+also form a cephalic furrow. The cauterized group includes wildtype
+(n=2) and <em>btd</em> (n=1). The cephalic furrow in cauterized embryos
+is 15% shallower (p=0.0221 in Welch Two Sample t-test).
 <strong>i</strong>, Recoil velocity of laser ablations around the
-cephalic furrow at stage 6. The average recoil increases with time, and
-decreases as a function of the distance to the initiator cells. In late
-stage 6 the region showing recoil reaches 40µm anterior and posterior of
-the invagination. <strong>j</strong>, Schematic drawings showing the
-summary of the ectopic folding in double mutants and germ band
-cauterization experiments.</figcaption>
+cephalic furrow at stage 6. The average recoil increases with time for
+anterior cuts (early n=11, mid n=13, late n=12), and reaches a peak at
+mid stage 6 for posterior cuts (early n=7, mid n=14, late n=10). The
+average recoil velocity is smaller at greater distances (−40 and 40)
+than at shorter distances (−20 and 20) from the initiator cells. In late
+stage 6 the region with recoil reaches at least 40µm anterior and
+posterior of the invagination. <strong>j</strong>, Schematic drawings
+showing the summary of the ectopic folding in double mutants and germ
+band cauterization experiments.</figcaption>
 </figure>
 </div>
 <div id="fig:summary" class="fignos">
