Improve profile drawing in summary figure

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1821,22 +1821,23 @@ band cauterization experiments.</figcaption>
 <div id="fig:summary" class="fignos">
 <figure>
 <img src="figures/Fig5.jpg" style="width:50.0%"
-alt="Figure 5: Mechanical role of the cephalic furrow in development and evolution. a, Schematic drawings of a lateral view comparing wildtype and cephalic furrow mutants. Tissue flows are represented by vermilion arrows, mitotic domains by gray circles, and the folded area by sky blue. In cephalic furrow mutants the excess of epithelial tissue on the surface combined with the formation of mitotic domains and germ band extension leads to mechanical instabilities at the head–trunk boundary. b, Schematic drawings of a profile view comparing the changes in epithelial thickness in cephalic furrow mutants and the correlation with the position of tissue buckling. c, Simplified dipteran phylogenetic tree with mapped traits. The germ band extension and mitotic domains probably evolved at the base of dipteran flies. The cephalic furrow is a late innovation. It is absent in Clogmia46 and Chironomus47, and present in the common ancestor of Megaselia48 and Drosophila. It is unclear whether mechanical stresses are present in the head–trunk boundary of flies without cephalic furrow. d, Scenario for the evolution of the cephalic furrow. In the ancestral state there was no mechanical instability at the head–trunk boundary. With the evolution of the long germ and mitotic domains there was an increase in the compressive stresses at the head–trunk boundary. Selection for faster developmental times put the region under increased strain leading to the genetic stabilization of a pre-patterned head invagination that buffers these mechanical forces and probably bring a selective advantage to flies with a cephalic furrow." />
+alt="Figure 5: Mechanical role of the cephalic furrow in development and evolution. a, Schematic drawings of a lateral view comparing wildtype and cephalic furrow mutants. Tissue flows are represented by black arrows, mitotic domains (MD) by light gray patches, and the cephalic furrow (CF) area by a dark gray band. In cephalic furrow mutants the excess of epithelial tissue on the surface, combined with the formation of mitotic domains and the extension of the germ band (GB), leads to mechanical instabilities and the buckling of ectopic folds (EF) at the head–trunk boundary. b, Schematic drawings of a profile view comparing the changes in epithelial thickness in cephalic furrow mutants and the correlation with the position of tissue buckling. c, Simplified dipteran phylogenetic tree with mapped traits. The germ band extension and mitotic domains probably evolved at the base of dipteran flies. The cephalic furrow is a late innovation. It is absent in Clogmia46 and Chironomus47, and present in the common ancestor of Megaselia48 and Drosophila. It is unclear whether mechanical stresses are present in the head–trunk boundary of flies without cephalic furrow. d, Scenario for the evolution of the cephalic furrow. In the ancestral state there was no mechanical instability at the head–trunk boundary. With the evolution of the long germ and mitotic domains there was an increase in the compressive stresses at the head–trunk boundary. Selection for faster developmental times put the region under increased strain leading to the genetic stabilization of a pre-patterned head invagination that buffers these mechanical forces and probably bring a selective advantage to flies with a cephalic furrow." />
 <figcaption aria-hidden="true"><span>Figure 5:</span> Mechanical role of
 the cephalic furrow in development and evolution. <strong>a</strong>,
 Schematic drawings of a lateral view comparing wildtype and cephalic
-furrow mutants. Tissue flows are represented by vermilion arrows,
-mitotic domains by gray circles, and the folded area by sky blue. In
-cephalic furrow mutants the excess of epithelial tissue on the surface
-combined with the formation of mitotic domains and germ band extension
-leads to mechanical instabilities at the head–trunk boundary.
-<strong>b</strong>, Schematic drawings of a profile view comparing the
-changes in epithelial thickness in cephalic furrow mutants and the
-correlation with the position of tissue buckling. <strong>c</strong>,
-Simplified dipteran phylogenetic tree with mapped traits. The germ band
-extension and mitotic domains probably evolved at the base of dipteran
-flies. The cephalic furrow is a late innovation. It is absent in
-<em>Clogmia</em><span class="citation"
+furrow mutants. Tissue flows are represented by black arrows, mitotic
+domains (MD) by light gray patches, and the cephalic furrow (CF) area by
+a dark gray band. In cephalic furrow mutants the excess of epithelial
+tissue on the surface, combined with the formation of mitotic domains
+and the extension of the germ band (GB), leads to mechanical
+instabilities and the buckling of ectopic folds (EF) at the head–trunk
+boundary. <strong>b</strong>, Schematic drawings of a profile view
+comparing the changes in epithelial thickness in cephalic furrow mutants
+and the correlation with the position of tissue buckling.
+<strong>c</strong>, Simplified dipteran phylogenetic tree with mapped
+traits. The germ band extension and mitotic domains probably evolved at
+the base of dipteran flies. The cephalic furrow is a late innovation. It
+is absent in <em>Clogmia</em><span class="citation"
 data-cites="Jimenez-Guri2014-zs"><sup><a href="#ref-Jimenez-Guri2014-zs"
 role="doc-biblioref">46</a></sup></span> and <em>Chironomus</em><span
 class="citation" data-cites="Caroti2015-cy"><sup><a
