--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1021,13 +1021,12 @@ glycerol immersion objective to acquire every 2:38min two different
 planes of the blastoderm, (i) the surface to monitor the germ band
 extension, and (ii) 40µm deep in the equatorial region to monitor the
 occurrence of ectopic folding. The stacks had 0.21µm XY-resolution and
-one minute time resolution. <!--TODO: Temperature in MuVi and Zeiss?-->
-To obtain a quantitative measure of ectopic folding, we analyzed the
-degree by which the tissues deform between non-cauterized and cauterized
-mutants using as a proxy the tortuosity of the epithelium outline. For
-that, we took the profile slices from dorsal recordings and transformed
-the curved vitelline envelope into a straight line using the
-<em>Straighten</em> tool of ImageJ (Figure <a
+one minute time resolution. To obtain a quantitative measure of ectopic
+folding, we analyzed the degree by which the tissues deform between
+non-cauterized and cauterized mutants using as a proxy the tortuosity of
+the epithelium outline. For that, we took the profile slices from dorsal
+recordings and transformed the curved vitelline envelope into a straight
+line using the <em>Straighten</em> tool of ImageJ (Figure <a
 href="#fig:tortuosity">S9</a>a). We then cropped a 200×25µm region along
 the head–trunk interface and applied gaussian blur, thresholding, and
 edge detection to obtain the epithelium outline for individual
@@ -1041,6 +1040,7 @@ role="doc-biblioref">36</a></sup></span> (<a
 href="https://imagej.net/plugins/analyze-skeleton/">imagej.net/plugins/analyze-skeleton</a>),
 and generated the color-coded temporal projections as described
 above.</p>
+<!--TODO: Temperature in MuVi and Zeiss?-->
 <h2 id="laser-ablation-experiments">Laser ablation experiments</h2>
 <p>We performed laser ablations in a Yokogawa CSU-X1 confocal spinning
 disk, an EMCCD camera (Andor iXon DU-888), and the software AndorIQ for
@@ -1049,19 +1049,19 @@ MatTek glass-bottom petri dish and covered the samples with water, and
 performed the ablations using a Titanium Sapphire Chameleon Ultra II
 (Coherent) laser at 800nm tuned down from 80MHz to 20kHz with a
 pulse-picker. The laser power measured before the microscope port was 6
-mW and the pixel dwell time for scanning was 2µs.
-<!--TODO: What is the brand of the objective?--> To ensure the cut, we
+mW and the pixel dwell time for scanning was 2µs. To ensure the cut, we
 repeated the scan ten consecutive times along a single cell acquiring a
 single slice with a 60x/1.2NA water immersion objective with 0.18µm
 XY-resolution and 200ms time-steps. We ablated each embryo just once.
-<!--TODO: Does a higher temperature affects the quantifications?--> The
-temperature was maintained at 28°C. To analyse the ablation data, we
+The temperature was maintained at 28°C. To analyse the ablation data, we
 created a line crossing the edges of the ablated cell perpendicular to
 the cut and generated a kymograph using the <em>Multi Kymograph</em>
 Fiji plugin (Figure <a href="#fig:ablation">S10</a>). We then binarized
 the kymographs, measured the distance between cell edges over the first
 30s after the cut, and performed a linear fit of the data to obtain the
 recoil velocity (Figure <a href="#fig:ablation">S10</a>).</p>
+<!--TODO: What is the brand of the objective?-->
+<!--TODO: Does a higher temperature affects the quantifications?-->
 <h2 id="strain-rate-analysis">Strain rate analysis</h2>
 <p>To estimate the strain rates, we first performed particle image
 velocimetry on cartographic projections using the ImageJ plugin
@@ -1859,7 +1859,6 @@ probably bring a selective advantage to flies with a cephalic
 furrow.</figcaption>
 </figure>
 </div>
-<!--TODO:PT: You write about the evolution stuff extremely well. We need to do the review ;-)-->
 <h1 id="tables">Tables</h1>
 <div id="tbl:gbtime" class="tablenos">
 <table id="tbl:gbtime">
@@ -2212,7 +2211,7 @@ view of <em>btd</em>–<em>stg</em> double mutant. A sibling control
 <div id="fig:initiator" class="fignos">
 <figure>
 <img src="figures/FigS1.jpg" data-tag="S1" style="width:100.0%"
-alt="Figure S1: Perturbation of the initiator cell behavior in cephalic furrow mutants. a, Profile view showing the cephalic furrow formation in wildtype, prd, btd, and eve embryos. The samples are synchronized by the end of cellularization, when the cleavage furrows reach their basal position (frame 0.0min). The arrow indicates the position and timing of the first infolding of the tissue. In wildtype, the shortening of initiator cells begins before cellularization is complete. The apical side of adjacent cells remain in close contact to the initiator row becoming arched in an arrangement typical for the early phase of cephalic furrow formation (wildtype 0.0min). This arrangement is perturbed in mutant embryos to different degrees. In prd, the initiator cells shorten and the tissue invaginates, but the infolding is delayed and the adjacent cells do not arch over the initiator row (prd 6.1min). In btd, there is no cell shortening but some embryos exhibit a certain degree of anisotropic apical constriction which creates a bulge in the epithelium minutes after the end of cellularization (btd 6.0min, see also b). This initial bulge often primes the position of ectopic buckling. In eve, the cells show neither shortening nor apical constriction and ectopic folds appear about ten minutes after the end of cellularization (eve 9.7min). b, Surface view view of cartographic projections showing the head–trunk interface. In wildtype, the anisotropic apical constriction is localized to a narrow stripe adjacent to the initiator row. In prd embryos, the apical constriction occurs but it does not form a clear line of infolding cells preceding the invagination as in wildtype embryos. In btd embryos, there is a similar degree of anisotropic apical constriction occurring but not all embryos form ectopic folds at this region. In eve embryos, we observe no apical constriction behavior." />
+alt="Figure S1: Perturbation of the initiator cell behavior in cephalic furrow mutants. a, Profile view showing the cephalic furrow formation in wildtype, prd, btd, and eve embryos. The samples are synchronized by the end of cellularization, when the cleavage furrows reach their basal position (frame 0.0min). The arrow indicates the position and timing of the first infolding of the tissue. In wildtype, the shortening of initiator cells begins before cellularization is complete. The apical side of adjacent cells remain in close contact to the initiator row becoming arched in an arrangement typical for the early phase of cephalic furrow formation (wildtype 0.0min). This arrangement is perturbed in mutant embryos to different degrees. In prd, the initiator cells shorten and the tissue invaginates, but the infolding is delayed and the adjacent cells do not arch over the initiator row (prd 6.1min). In btd, there is no cell shortening but some embryos exhibit a certain degree of anisotropic apical constriction which creates a bulge in the epithelium minutes after the end of cellularization (btd 6.0min, see also b). This initial bulge often primes the position of ectopic buckling. In eve, the cells show neither shortening nor apical constriction and ectopic folds appear about ten minutes after the end of cellularization (eve 9.7min). Scale bars = 20µm. b, Surface view view of cartographic projections showing the head–trunk interface. In wildtype, the anisotropic apical constriction is localized to a narrow stripe adjacent to the initiator row. In prd embryos, the apical constriction occurs but it does not form a clear line of infolding cells preceding the invagination as in wildtype embryos. In btd embryos, there is a similar degree of anisotropic apical constriction occurring but not all embryos form ectopic folds at this region. In eve embryos, the mitotic domain 2 (MD) begins expanding and there is no apical constriction behavior. Time betwee frames is about 4min. Scale bars = 20µm (approximate value)." />
 <figcaption aria-hidden="true"><span>Figure S1:</span> Perturbation of
 the initiator cell behavior in cephalic furrow mutants.
 <strong>a</strong>, Profile view showing the cephalic furrow formation
@@ -2234,65 +2233,61 @@ minutes after the end of cellularization (<em>btd</em> 6.0min, see also
 <strong>b</strong>). This initial bulge often primes the position of
 ectopic buckling. In <em>eve</em>, the cells show neither shortening nor
 apical constriction and ectopic folds appear about ten minutes after the
-end of cellularization (<em>eve</em> 9.7min). <strong>b</strong>,
-Surface view view of cartographic projections showing the head–trunk
-interface. In wildtype, the anisotropic apical constriction is localized
-to a narrow stripe adjacent to the initiator row. In <em>prd</em>
-embryos, the apical constriction occurs but it does not form a clear
-line of infolding cells preceding the invagination as in wildtype
-embryos. In <em>btd</em> embryos, there is a similar degree of
-anisotropic apical constriction occurring but not all embryos form
-ectopic folds at this region. In <em>eve</em> embryos, we observe no
-apical constriction behavior.</figcaption>
+end of cellularization (<em>eve</em> 9.7min). Scale bars = 20µm.
+<strong>b</strong>, Surface view view of cartographic projections
+showing the head–trunk interface. In wildtype, the anisotropic apical
+constriction is localized to a narrow stripe adjacent to the initiator
+row. In <em>prd</em> embryos, the apical constriction occurs but it does
+not form a clear line of infolding cells preceding the invagination as
+in wildtype embryos. In <em>btd</em> embryos, there is a similar degree
+of anisotropic apical constriction occurring but not all embryos form
+ectopic folds at this region. In <em>eve</em> embryos, the mitotic
+domain 2 (MD) begins expanding and there is no apical constriction
+behavior. Time betwee frames is about 4min. Scale bars = 20µm
+(approximate value).</figcaption>
 </figure>
 </div>
-<!--TODO: Add scale bars to a and b.-->
-<!--TODO: Add annotation for apical constriction.-->
-<!--TODO: Add time annotation.-->
 <div id="fig:features" class="fignos">
 <figure>
 <img src="figures/FigS2.jpg" data-tag="S2" style="width:100.0%"
-alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). c, Folded area of the cephalic furrow and ectopic folds in eve heterozygotes (left) and homozygotes (right). d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. The ectopic folds are generally shallower than the cephalic furrow in both genetic backgrounds. g, Folded area of ectopic folds in wildtype embryos compared to ectopic folds in btd, eve, and prd embryos. h, Lateral views of wildtype and prd embryos exhibiting ectopic folds. i, Cartographic projections showing the folded area in the cephalic furrow and ectopic folds of the embryos in h. j, Comparison of folded area between the cephalic furrow and ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells." />
+alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). Scale bar = 20µm. b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). Scale bar = 50µm. c, Folded area of the cephalic furrow and ectopic folds in eve heterozygotes (left) and homozygotes (right). d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. The ectopic folds are generally shallower than the cephalic furrow in both genetic backgrounds. g, Folded area of ectopic folds in wildtype embryos compared to ectopic folds in btd, eve, and prd embryos. h, Lateral views of wildtype and prd embryos exhibiting ectopic folds. Scale bar = 50µm. i, Cartographic projections showing the folded area in the cephalic furrow and ectopic folds of the embryos in h. j, Comparison of folded area between the cephalic furrow and ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells. Scale bar = 10µm." />
 <figcaption aria-hidden="true"><span>Figure S2:</span> Differences
 between ectopic folding and cephalic furrow formation.
 <strong>a</strong>, Profile view of a <em>btd</em> mutant embryo showing
 the presence of two ectopic folds (arrows) forming next to dividing
-cells (asterisks). <strong>b</strong>, Distribution of ectopic folds in
-<em>eve</em> homozygotes (right) and sibling controls (left).
-<strong>c</strong>, Folded area of the cephalic furrow and ectopic folds
-in <em>eve</em> heterozygotes (left) and homozygotes (right).
-<strong>d</strong>, Dynamics of cephalic furrow and ectopic fold
-formation in <em>eve</em> mutants. <strong>e</strong>, Dynamics, angle
-directionality, and tortuosity measurements comparing the cephalic
-furrow and ectopic fold formation. Within the first fifteen minutes
-after gastrulation, the cephalic furrow exhibits a typical posterior
-shift on the dorsal side which declines the initial angle of the
-invagination from 80° to about 60° in relation to the anteroposterior
-axis. During this period, begins as a straight line and bends showing a
-correspondent increase in the measured tortuosity values of the furrow
-outline. In contrast, ectopic folds show no obvious trend in angular
-direction tortuosity values over time. <strong>f</strong>, Maximum
-folding depth of the cephalic furrow and ectopic folds in <em>btd</em>
-and <em>eve</em> mutants. The ectopic folds are generally shallower than
-the cephalic furrow in both genetic backgrounds. <strong>g</strong>,
-Folded area of ectopic folds in wildtype embryos compared to ectopic
-folds in <em>btd</em>, <em>eve</em>, and <em>prd</em> embryos.
-<strong>h</strong>, Lateral views of wildtype and <em>prd</em> embryos
-exhibiting ectopic folds. <strong>i</strong>, Cartographic projections
-showing the folded area in the cephalic furrow and ectopic folds of the
-embryos in <strong>h</strong>. <strong>j</strong>, Comparison of folded
-area between the cephalic furrow and ectopic folds in different genetic
+cells (asterisks). Scale bar = 20µm. <strong>b</strong>, Distribution of
+ectopic folds in <em>eve</em> homozygotes (right) and sibling controls
+(left). Scale bar = 50µm. <strong>c</strong>, Folded area of the
+cephalic furrow and ectopic folds in <em>eve</em> heterozygotes (left)
+and homozygotes (right). <strong>d</strong>, Dynamics of cephalic furrow
+and ectopic fold formation in <em>eve</em> mutants. <strong>e</strong>,
+Dynamics, angle directionality, and tortuosity measurements comparing
+the cephalic furrow and ectopic fold formation. Within the first fifteen
+minutes after gastrulation, the cephalic furrow exhibits a typical
+posterior shift on the dorsal side which declines the initial angle of
+the invagination from 80° to about 60° in relation to the
+anteroposterior axis. During this period, begins as a straight line and
+bends showing a correspondent increase in the measured tortuosity values
+of the furrow outline. In contrast, ectopic folds show no obvious trend
+in angular direction tortuosity values over time. <strong>f</strong>,
+Maximum folding depth of the cephalic furrow and ectopic folds in
+<em>btd</em> and <em>eve</em> mutants. The ectopic folds are generally
+shallower than the cephalic furrow in both genetic backgrounds.
+<strong>g</strong>, Folded area of ectopic folds in wildtype embryos
+compared to ectopic folds in <em>btd</em>, <em>eve</em>, and
+<em>prd</em> embryos. <strong>h</strong>, Lateral views of wildtype and
+<em>prd</em> embryos exhibiting ectopic folds. Scale bar = 50µm.
+<strong>i</strong>, Cartographic projections showing the folded area in
+the cephalic furrow and ectopic folds of the embryos in
+<strong>h</strong>. <strong>j</strong>, Comparison of folded area
+between the cephalic furrow and ectopic folds in different genetic
 backgrounds. <strong>k</strong>, Developmental sequence of the wildtype
 embryo ectopic fold annotated in <strong>i</strong>. Four cells are
-temporarily infolded during the mitotic expansion of adjacent
-cells.</figcaption>
+temporarily infolded during the mitotic expansion of adjacent cells.
+Scale bar = 10µm.</figcaption>
 </figure>
 </div>
-<!--TODO: Add scale bar to profile (a)-->
-<!--TODO: Add color scale to (d)-->
-<!--TODO: Add stages to (h)-->
 <!--TODO: Add n and genotype annotation to (j)-->
-<!--TODO: Add scale bar to (k)-->
 <div id="fig:apical" class="fignos">
 <figure>
 <img src="figures/FigS3.jpg" data-tag="S3" style="width:50.0%"
