--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1621,7 +1621,7 @@ abdita</em></a>. <em>PLoS One</em> <strong>9</strong>, e84421
 <div id="fig:ectopic" class="fignos">
 <figure>
 <img src="figures/Fig1.jpg" style="width:100.0%"
-alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. Scale bars = 20µm. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. Scale bars = 50µm. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about 7 minutes after gastrulation in wildtype (+/+, n=16) and btd heterozygotes (+/−, n=6), and is delayed in eve and prd heterozygotes (+/−, n=7 and n=10, respectively) and in prd homozygotes (−/−, n=5). Ectopic folds form about 20min after gastrulation in btd and eve homozygotes (−/−, n=5 and n=5, respectively). One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. The n values are the same as in d. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants (n=6). Scale bars = 50µm. g, Folded area of the cephalic furrow in a representative sibling control and of ectopic folds in a btd mutant (measure in µm2×103). The data is visualized in a cartographic projection of the surface of the embryo. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
+alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. Scale bars = 20µm. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. Scale bars = 50µm. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about 7 minutes after gastrulation in wildtype (+/+, n=16) and btd heterozygotes (+/−, n=6), and is delayed in eve and prd heterozygotes (+/−, n=7 and n=10, respectively) and in prd homozygotes (−/−, n=5). Ectopic folds form about 20min after gastrulation in btd and eve homozygotes (−/−, n=5 and n=5, respectively). One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. The n values are the same as in d. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants (n=6). Scale bars = 50µm. g, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in btd embryos. The folded region is outlined in yellow on cartographic projections of a representative sibling control btd heterozygote (left) and of a btd homozygote (right). The numbers indicate the average folded area for the sample type in µm2×103. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
 <figcaption aria-hidden="true"><span>Figure 1:</span> Formation of
 ectopic folds in cephalic furrow mutants. <strong>a</strong>, Overview
 of key developmental events using a standard developmental staging<span
@@ -1663,10 +1663,12 @@ the same as in <strong>d</strong>. <strong>f</strong>, Variability in
 the distribution of the cephalic furrow in sibling controls
 (<em>btd</em> heterozygotes) and of the ectopic folds in <em>btd</em>
 mutants (n=6). Scale bars = 50µm. <strong>g</strong>, Folded area of the
-cephalic furrow in a representative sibling control and of ectopic folds
-in a <em>btd</em> mutant (measure in µm<sup>2</sup>×10<sup>3</sup>). The
-data is visualized in a cartographic projection of the surface of the
-embryo. <strong>h</strong>, Quantification of the total folded area of
+cephalic furrow (CF) and ectopic folds (EF) in <em>btd</em> embryos. The
+folded region is outlined in yellow on cartographic projections of a
+representative sibling control <em>btd</em> heterozygote (left) and of a
+<em>btd</em> homozygote (right). The numbers indicate the average folded
+area for the sample type in µm<sup>2</sup>×10<sup>3</sup>.
+<strong>h</strong>, Quantification of the total folded area of
 epithelial surface in cephalic furrow mutants.</figcaption>
 </figure>
 </div>
@@ -2250,7 +2252,7 @@ behavior. Time betwee frames is about 4min. Scale bars = 20µm
 <div id="fig:features" class="fignos">
 <figure>
 <img src="figures/FigS2.jpg" data-tag="S2" style="width:100.0%"
-alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). Scale bar = 20µm. b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). Scale bar = 50µm. c, Folded area of the cephalic furrow and ectopic folds in eve heterozygotes (left) and homozygotes (right). d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. The ectopic folds are generally shallower than the cephalic furrow in both genetic backgrounds. g, Folded area of ectopic folds in wildtype embryos compared to ectopic folds in btd, eve, and prd embryos. h, Lateral views of wildtype and prd embryos exhibiting ectopic folds. Scale bar = 50µm. i, Cartographic projections showing the folded area in the cephalic furrow and ectopic folds of the embryos in h. j, Comparison of folded area between the cephalic furrow and ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells. Scale bar = 10µm." />
+alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). Scale bar = 20µm. b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). Scale bar = 50µm. c, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in eve embryos. The folded region is outlined in yellow on cartographic projections of a representative sibling control eve heterozygote (left) and of a eve homozygote (right). The numbers indicate the average folded area for the sample type in µm2×103. d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. For both angle and tortuosity analysis, n=6. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. The ectopic folds are generally shallower than the cephalic furrow in both genetic backgrounds. g, Folded area of ectopic folds in wildtype embryos compared to ectopic folds in btd, eve, and prd embryos. h, Lateral views of a wildtype (top) and a prd mutant (bottom) exhibiting ectopic folds. Scale bar = 50µm. i, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in the wildtype (top) and prd mutant (bottom) shown in h. The folded region is outlined in yellow on a cartographic projection. The numbers indicate the average folded area in µm2×103 for the CFs and EFs separately. j, Comparison of folded area between the cephalic furrow and ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells. Scale bar = 10µm." />
 <figcaption aria-hidden="true"><span>Figure S2:</span> Differences
 between ectopic folding and cephalic furrow formation.
 <strong>a</strong>, Profile view of a <em>btd</em> mutant embryo showing
@@ -2258,29 +2260,36 @@ the presence of two ectopic folds (arrows) forming next to dividing
 cells (asterisks). Scale bar = 20µm. <strong>b</strong>, Distribution of
 ectopic folds in <em>eve</em> homozygotes (right) and sibling controls
 (left). Scale bar = 50µm. <strong>c</strong>, Folded area of the
-cephalic furrow and ectopic folds in <em>eve</em> heterozygotes (left)
-and homozygotes (right). <strong>d</strong>, Dynamics of cephalic furrow
-and ectopic fold formation in <em>eve</em> mutants. <strong>e</strong>,
-Dynamics, angle directionality, and tortuosity measurements comparing
-the cephalic furrow and ectopic fold formation. Within the first fifteen
-minutes after gastrulation, the cephalic furrow exhibits a typical
-posterior shift on the dorsal side which declines the initial angle of
-the invagination from 80° to about 60° in relation to the
-anteroposterior axis. During this period, begins as a straight line and
-bends showing a correspondent increase in the measured tortuosity values
-of the furrow outline. In contrast, ectopic folds show no obvious trend
-in angular direction tortuosity values over time. <strong>f</strong>,
-Maximum folding depth of the cephalic furrow and ectopic folds in
-<em>btd</em> and <em>eve</em> mutants. The ectopic folds are generally
-shallower than the cephalic furrow in both genetic backgrounds.
-<strong>g</strong>, Folded area of ectopic folds in wildtype embryos
-compared to ectopic folds in <em>btd</em>, <em>eve</em>, and
-<em>prd</em> embryos. <strong>h</strong>, Lateral views of wildtype and
-<em>prd</em> embryos exhibiting ectopic folds. Scale bar = 50µm.
-<strong>i</strong>, Cartographic projections showing the folded area in
-the cephalic furrow and ectopic folds of the embryos in
-<strong>h</strong>. <strong>j</strong>, Comparison of folded area
-between the cephalic furrow and ectopic folds in different genetic
+cephalic furrow (CF) and ectopic folds (EF) in <em>eve</em> embryos. The
+folded region is outlined in yellow on cartographic projections of a
+representative sibling control <em>eve</em> heterozygote (left) and of a
+<em>eve</em> homozygote (right). The numbers indicate the average folded
+area for the sample type in µm<sup>2</sup>×10<sup>3</sup>.
+<strong>d</strong>, Dynamics of cephalic furrow and ectopic fold
+formation in <em>eve</em> mutants. <strong>e</strong>, Dynamics, angle
+directionality, and tortuosity measurements comparing the cephalic
+furrow and ectopic fold formation. Within the first fifteen minutes
+after gastrulation, the cephalic furrow exhibits a typical posterior
+shift on the dorsal side which declines the initial angle of the
+invagination from 80° to about 60° in relation to the anteroposterior
+axis. During this period, begins as a straight line and bends showing a
+correspondent increase in the measured tortuosity values of the furrow
+outline. In contrast, ectopic folds show no obvious trend in angular
+direction tortuosity values over time. For both angle and tortuosity
+analysis, n=6. <strong>f</strong>, Maximum folding depth of the cephalic
+furrow and ectopic folds in <em>btd</em> and <em>eve</em> mutants. The
+ectopic folds are generally shallower than the cephalic furrow in both
+genetic backgrounds. <strong>g</strong>, Folded area of ectopic folds in
+wildtype embryos compared to ectopic folds in <em>btd</em>,
+<em>eve</em>, and <em>prd</em> embryos. <strong>h</strong>, Lateral
+views of a wildtype (top) and a <em>prd</em> mutant (bottom) exhibiting
+ectopic folds. Scale bar = 50µm. <strong>i</strong>, Folded area of the
+cephalic furrow (CF) and ectopic folds (EF) in the wildtype (top) and
+<em>prd</em> mutant (bottom) shown in <strong>h</strong>. The folded
+region is outlined in yellow on a cartographic projection. The numbers
+indicate the average folded area in µm<sup>2</sup>×10<sup>3</sup> for
+the CFs and EFs separately. <strong>j</strong>, Comparison of folded
+area between the cephalic furrow and ectopic folds in different genetic
 backgrounds. <strong>k</strong>, Developmental sequence of the wildtype
 embryo ectopic fold annotated in <strong>i</strong>. Four cells are
 temporarily infolded during the mitotic expansion of adjacent cells.
