Cite fig1 when first mentioning ectopic folds

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -173,6 +173,7 @@
       margin-left: 2em;
     }
   </style>
+  
 </head>
 <body>
 <header id="title-block-header">
@@ -344,9 +345,10 @@ initiator cells is perturbed in the three mutants, it is only in
 furrow formation—the cell shortening—is severely disrupted. Strikingly,
 about 10–15 min after the onset of gastrulation, these mutants form a
 notable epithelial fold near the canonical position of cephalic furrow
-formation (Figure <a href="#fig:initiator">S1</a>a). Intrigued by this
-puzzling phenotype, we asked whether the formation of this late fold is
-a direct consequence of the absence of the cephalic furrow.</p>
+formation (Figure <a href="#fig:ectopic">1</a>b,c, Figure <a
+href="#fig:initiator">S1</a>a). Intrigued by this puzzling phenotype, we
+asked whether the formation of this late fold is a direct consequence of
+the absence of the cephalic furrow.</p>
 <!--These differences may be associated with apical myosin activity which is present in *btd* but not in *eve* mutants [@Eritano2020-mi].-->
 <!--TODO: Create video for btd initiator cells {!@fig:vid-initiator-btd}-->
 <!--TODO: Create video for prd initiator cells {!@fig:vid-initiator-prd}-->
